baml_language/crates/baml_tests/snapshots/broken_syntax/parser_speculative/baml_tests__broken_syntax__parser_speculative__01_lexer__ambiguous_function.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "This"
Word "could"
Word "initially"
Word "look"
Word "like"
Word "either"
Word "type"
Function "function"
Word "Ambiguous"
LParen "("
Word "input"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Client "client"
Word "GPT4"
Slash "/"
Slash "/"
Word "This"
Word "keyword"
Word "determines"
Word "it"
Error "'"
Word "s"
Word "an"
Word "LLM"
Function "function"
Slash "/"
Slash "/"
Word "Even"
Word "though"
Word "it"
Word "starts"
Word "like"
Word "it"
Word "could"
Word "be"
Word "expression"
Function "function"
RBrace "}"
Slash "/"
Slash "/"
Word "This"
Word "one"
Word "has"
Word "a"
Word "typo"
Word "but"
Word "intent"
Is "is"
Word "clear"
Function "function"
Word "AnotherLLM"
LParen "("
Word "input"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "clent"
Word "GPT4"
Slash "/"
Slash "/"
Word "Typo"
In "in"
Quote "\""
Client "client"
Quote "\""
Word "prompt"
Hash "#"
Quote "\""
Word "Process"
Colon ":"
LBrace "{"
LBrace "{"
Word "input"
RBrace "}"
RBrace "}"
Quote "\""
Hash "#"
Slash "/"
Slash "/"
Quote "\""
Word "prompt"
Quote "\""
Word "keyword"
Word "helps"
Word "disambiguate"
RBrace "}"
