baml_language/crates/baml_tests/snapshots/broken_syntax/parser_speculative/baml_tests__broken_syntax__parser_speculative__01_lexer__expr_function.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "JsonData"
LBrace "{"
Word "field1"
Word "int"
Word "field2"
Word "int"
RBrace "}"
Function "function"
Word "ProcessData"
LParen "("
Word "data"
Colon ":"
Word "JsonData"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "result"
Equals "="
Word "data"
Dot "."
Word "field1"
Plus "+"
Word "data"
Dot "."
Word "field2"
Semicolon ";"
If "if"
LParen "("
Word "result"
Greater ">"
IntegerLiteral "100"
RParen ")"
LBrace "{"
Return "return"
Quote "\""
Word "high"
Quote "\""
Semicolon ";"
RBrace "}"
Return "return"
Quote "\""
Word "low"
Quote "\""
Semicolon ";"
RBrace "}"
