baml_language/crates/baml_tests/snapshots/broken_syntax/parser_speculative/baml_tests__broken_syntax__parser_speculative__01_lexer__llm_function.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Function "function"
Word "ExtractData"
LParen "("
Word "text"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "JsonData"
LBrace "{"
Client "client"
Word "GPT4"
Word "prompt"
Hash "#"
Quote "\""
Word "Extract"
Word "structured"
Word "data"
Word "from"
Colon ":"
LBrace "{"
LBrace "{"
Word "text"
RBrace "}"
RBrace "}"
Word "Return"
Word "as"
Word "JSON"
Dot "."
Quote "\""
Hash "#"
RBrace "}"
